# gauthz

./: Cargo.toml
examples/: demo.rs  scopes.rs
src/: error.rs  lib.rs  scope.rs
