[package]
name = "gauthz"
version = "0.2.0"
authors = ["softprops <d.tangren@gmail.com>", "Cedric Gatay <c.gatay@code-troopers.com"]
description = "Google API authentication crate"
documentation = "https://softprops.github.io/gauthz"
homepage = "https://github.com/softprops/gauthz"
repository = "https://github.com/softprops/gauthz"
keywords = ["gcp", "oauth2", "google", "api"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "softprops/gauthz" }
coveralls = { repository = "softprops/gauthz" }

[dependencies]
error-chain = "0.10"
futures = "0.3"
hyper = "0.13"
medallion="2.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1"
tokio = { version = "0.2", features = ["full"] }

[dependencies.hyper-tls]
optional = true
version = "0.4"

[features]
default = ["tls"]
tls = ["hyper-tls"]